fix: text-shadow clipping in safari

--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,9 @@
 }
 
 .App-countdown-number {
-  mix-blend-mode: overlay;
+  display: inline-block;
   font-size: 2.3rem;
   font-weight: bold;
+  mix-blend-mode: overlay;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
 }
